<resources>
    <string name="app_name">HiDaLat</string>
    <string name="maps_api_key">AIzaSyDX6evCh_CoIjM21Zb167s6udpBuFl17Bo</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">du lịch đà lạt</string>
    <string name="title_activity_main">Địa điểm</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_place">ĐỊA ĐIỂM</string>
    <string name="nav_filter">CHỌN LỌC</string>
    <string name="nav_tour">TOUR</string>
    <string name="nav_news">TIN TỨC</string>
    <string name="nav_about">THÔNG TIN</string>
    <string name="nav_share">CHIA SẺ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_rated">Nổi bật</string>
    <string name="day">Trong Ngày</string>
    <string name="all">Tất cả</string>
    <string name="sights">Thắng cảnh</string>
    <string name="staying">Lưu trú</string>
    <string name="food">Ăn uống</string>
    <string name="shopping">Mua sắm</string>
    <string name="back_to_exit">Chạm lần nữa để thoát ứng dụng</string>
    <string name="info">Thông tin</string>
    <string name="long_sample">Trường Cao đẳng Sư phạm Đà Lạt (trước kia là trường Grand Lycée Yersin) là kiến trúc được Hội Kiến trúc sư thế giới (UIA) công nhận là một trong số 1.000 công trình xây dựng độc đáo của thế giới trong thế kỷ 20. Trường được người Pháp thành lập năm 1927, do kiến trúc sư Moncet thiết kế và chỉ đạo xây dựng, dành cho con em người Pháp và một số gia đình người Việt giàu có. Năm 1932 trường Petit Lycée Dalat được đổi tên thành Grand Lycée de DalatLycée Yersin để tưởng niệm bác sĩ Alexandre Yersin. Dãy lớp học được xây hình vòng cung, gạch xây trường là gạch trần đỏ được chở từ châu Âu sang, mái được lợp bằng ngói làm từ nước Pháp. Hiện nay các tấm ngói lợp đã được thay thế do các tấm ngói cũ đã không còn sử dụng được nữa. Điểm nhấn của dãy nhà hình vòng cung là tháp chuông.</string>
    <string name="see_more">+ Xem thêm</string>
    <string name="image">Hình ảnh</string>
    <string name="short_sample">29 Yersin, tp. Đà Lạt, Lâm Đồng, Việt Nam</string>
    <string name="post_date">20/6/2016</string>
    <string name="post_person">Mr.Don</string>
    <string name="action_view_image">Xem hình</string>
    <string name="action_direct">Chỉ đường</string>
    <string name="action_save">Lưu lại</string>
    <string name="action_share">Chia sẻ</string>
    <string name="fetch_route">Đang tìm đường đi...</string>
    <string name="time_sample">23/06/2016</string>
    <string name="price_sample">5.000.000 VND</string>
    <string name="related_tour">Tour liên quan</string>
    <string name="schedule">Lịch trình Tour</string>
    <string name="introduce_app">\tDu Lịch Đà Lạt xuất hiện từ khi Đà Lạt trở thành thiên đường về du lịch nghỉ dưỡng với phong cảnh tuyệt đẹp và con người hiền hòa. Hoa Dalat Travel tự hào là nhà tổ chức các Tour Du Lịch Đà Lạt chuyên nghiệp và Đặt Phòng Khách Sạn Đà Lạt online giá rẻ nhất 2016 !\n\t App Du Lịch Đà Lạt này giúp người dùng thuận tiện khi đi du lịch ở Đà Lạt biết được thông tin Tours, khách sạn, nơi mua sắm, các món đặc sản cũng như các thông tin về dịch vụ du lịch ở xứ ngàn hoa này.</string>
</resources>
