<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_place"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/nav_place" />
        <item
            android:id="@+id/nav_filter"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_filter" />
        <item
            android:id="@+id/nav_tour"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_tour" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_news" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/nav_about" />
        </menu>
    </item>

</menu>
