<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:id="@+id/card"
        app:cardCornerRadius="4dp"
        app:cardPreventCornerOverlap="false"
        app:cardBackgroundColor="@android:color/white"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:layout_margin="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.joooonho.SelectableRoundedImageView
            android:id="@+id/thumbnail"
            android:src="@drawable/cdsp"
            android:scaleType="centerCrop"
            app:sriv_left_top_corner_radius="4dp"
            app:sriv_right_top_corner_radius="4dp"
            android:layout_width="match_parent"
            android:layout_height="192dp" />
        <LinearLayout
            android:padding="8dp"
            android:layout_marginTop="200dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/place_name"
                android:text="tour name"
                android:textColor="@color/headline_text"
                android:textSize="14sp"
                android:maxLines="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/place_address"
                android:text="@string/short_sample"
                android:textColor="@color/grey"
                android:maxLines="5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/time"
                android:text="@string/time_sample"
                android:layout_marginTop="8dp"
                android:maxLines="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/price"
                android:text="@string/price_sample"
                android:layout_marginTop="8dp"
                android:maxLines="3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>
